--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -28,4 +35,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha08'
+
+    // CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:1.0.0-beta09"
+    // CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta09"
+    // CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha16"
 }
