--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'mips', 'mips64', 'arm64-v8a'
+            universalApk false
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -37,6 +47,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
 
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha08'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha07'
+
+    api "com.github.kuamanet:android-native-opencv:0.1"
 
     // CameraX core library using camera2 implementation
     implementation "androidx.camera:camera-camera2:1.0.0-beta09"
